# fullstack-evm-challenge

./: .gitignore  AI_PROCESS.md  README.md
back/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
back/alembic/versions/: 001_create_initial_tables.py
back/app/: config.py  constants.py  database.py  main.py
back/app/models/: __init__.py  actividad.py  actividad_detalle.py  proyecto.py  recurso.py  tipo_recurso.py
back/app/repositories/: actividad_detalle_repository.py  actividad_repository.py  base.py  proyecto_repository.py  recurso_repository.py  tipo_recurso_repository.py
back/app/routers/: actividad_detalle.py  actividades.py  proyectos.py  recursos.py  tipo_recursos.py
back/app/schemas/: actividad.py  actividad_detalle.py  evm.py  proyecto.py  recurso.py  tipo_recurso.py
back/app/services/: actividad_detalle_service.py  actividad_service.py  evm_service.py  proyecto_service.py  recurso_service.py  tipo_recurso_service.py
back/scripts/: init_db.sql  seed.py
back/tests/: conftest.py
back/tests/integration/: test_actividades_api.py  test_evm_api.py  test_proyectos_api.py
back/tests/unit/: test_actividad_service.py  test_evm_service.py  test_proyecto_service.py
front/: README.md  angular.json  package-lock.json  package.json
front/src/: index.html  styles.css
front/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
front/src/app/components/actividad-form/: actividad-form.html  (+1 more)
front/src/app/models/: actividad.model.ts  evm-indicators.model.ts  proyecto.model.ts
front/src/app/services/: actividad.ts  proyecto.ts
(+14 files in other folders)
